--- a/package.json
+++ b/package.json
@@ -4,20 +4,35 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "npx dotenv -e .env.development nodemon src/server.ts",
+    "test": "npx dotenv -e .env.test npx jest --forceExit",
+    "test:migration:run": "npm run test:load-envs prisma migrate deploy",
+    "test:load-envs": "npx dotenv -e .env.test",
+    "dev:load-envs": "dotenv -e .env.development",
+    "dev:migration:run": "npm run dev:load-envs prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.0.0",
+    "dotenv-expand": "^10.0.0",
+    "jest": "^29.4.2",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^4.9.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
