test: consoles.test

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:Siga123@@localhost:5432/games_test?schema=public"
+DATABASE_URL="postgresql://postgres:alicaifpb@localhost:5432/games_test?schema=public"
